<resources>
    <string name="app_name">Calculator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="calculate">Calculate</string>
    <string name="_4">4</string>
    <string name="calculate_your_equation_here">Calculate your equation here</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="equals">=</string>
    <string name="_3">3</string>
    <string name="total">Total</string>
    <string name="addition">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="clear">Clear</string>
    <string name="_0">0</string>
</resources>