<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/wood_background">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <Button
        android:id="@+id/Number4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintBottom_toBottomOf="@+id/Number5"
        app:layout_constraintEnd_toEndOf="@+id/Number1"
        app:layout_constraintStart_toStartOf="@+id/Number1"
        app:layout_constraintTop_toBottomOf="@+id/Number1" />

    <TextView
        android:id="@+id/CalculatorDescriptor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="#9C27B0"
        android:text="@string/calculate_your_equation_here"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_main" />

    <Button
        android:id="@+id/Number5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintBottom_toBottomOf="@+id/Number6"
        app:layout_constraintEnd_toEndOf="@+id/Number2"
        app:layout_constraintStart_toStartOf="@+id/Number2"
        app:layout_constraintTop_toBottomOf="@+id/Number2" />

    <Button
        android:id="@+id/Number6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintEnd_toEndOf="@+id/Number3"
        app:layout_constraintStart_toStartOf="@+id/Number3"
        app:layout_constraintTop_toBottomOf="@+id/Number3" />

    <Button
        android:id="@+id/Number7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintBottom_toBottomOf="@+id/Number8"
        app:layout_constraintEnd_toEndOf="@+id/Number4"
        app:layout_constraintStart_toStartOf="@+id/Number4"
        app:layout_constraintTop_toBottomOf="@+id/Number4" />

    <Button
        android:id="@+id/Number8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintEnd_toEndOf="@+id/Number5"
        app:layout_constraintStart_toStartOf="@+id/Number5"
        app:layout_constraintTop_toBottomOf="@+id/Number5" />

    <Button
        android:id="@+id/Number9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintBottom_toBottomOf="@+id/Number8"
        app:layout_constraintEnd_toEndOf="@+id/Number6"
        app:layout_constraintStart_toStartOf="@+id/Number6"
        app:layout_constraintTop_toBottomOf="@+id/Number6" />

    <Button
        android:id="@+id/Number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/_1"
        app:layout_constraintEnd_toStartOf="@+id/Number2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calculate" />

    <Button
        android:id="@+id/Number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="@+id/Number1"
        app:layout_constraintEnd_toStartOf="@+id/Number3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Number1"
        app:layout_constraintTop_toTopOf="@+id/Number1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="#0CD114"
        android:hint="@string/_0"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/Number1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalculatorDescriptor"
        app:layout_constraintVertical_bias="1.0" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="526dp"
        android:layout_height="858dp"
        android:layout_marginTop="16dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/mobile_navigation" />

    <Button
        android:id="@+id/Equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="@+id/Clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Clear"
        app:layout_constraintTop_toTopOf="@+id/Clear" />

    <Button
        android:id="@+id/Number3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="@+id/Number2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Number2"
        app:layout_constraintTop_toTopOf="@+id/Number2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/TotalView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#CD261A"
        android:hint="@string/total"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Multiply" />

    <Button
        android:id="@+id/Addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        app:layout_constraintBottom_toBottomOf="@+id/Minus"
        app:layout_constraintEnd_toStartOf="@+id/Minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Minus" />

    <Button
        android:id="@+id/Minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/Multiply"
        app:layout_constraintEnd_toStartOf="@+id/Multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Addition"
        app:layout_constraintTop_toTopOf="@+id/Multiply" />

    <Button
        android:id="@+id/Multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toStartOf="@+id/Divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Minus"
        app:layout_constraintTop_toBottomOf="@+id/Number8" />

    <Button
        android:id="@+id/Divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        app:layout_constraintBottom_toBottomOf="@+id/Multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Multiply"
        app:layout_constraintTop_toTopOf="@+id/Multiply" />

    <Button
        android:id="@+id/Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#424904"
        android:text="@string/clear"
        android:textColor="#F4F0F0"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/Multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Number8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/NumberZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/Clear"
        app:layout_constraintEnd_toStartOf="@+id/Clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Clear" />

</androidx.constraintlayout.widget.ConstraintLayout>